[package]
name = "gemini-shoutbox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
gemini-hacking = { path = "../gemini-hacking" }
url = "2.2.2"
